<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_page_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Just_Run_btn"
        android:text="@string/Just_Run_Btn_Txt"
        android:layout_weight="1"
        android:onClick="toJustRunPage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/Past_Runs_Btn"
            android:text="@string/past_runs_btn_txt"
            android:layout_weight="1"
            android:onClick="toPastRunPage"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/Run_Planner_Btn"
            android:text="@string/run_planner_btn_txt"
            android:layout_weight="1"
            android:onClick="toCreateRoutinePage"/>

    </LinearLayout>

</LinearLayout>
